<resources>
    <string name="app_name">ChildsApp</string>
    <string name="action_settings">Settings</string>
    <string name="main_screen_lbl">Main Screen</string>

    <!-- Dashboard -->
    <string name="dashboard_title">Childs Health</string>
    <string name="child_development_title">Childs Development</string>
    <string name="child_nuts_title">Child Nuts</string>
    <string name="education_title">Education</string>
    <string name="vaccinations_title">Vaccinations</string>
    <string name="vaccinations_list_title">Vaccinations List</string>
    <string name="send_report_list_title">Send Report</string>
    <string name="notifications_list_title">Notifications</string>


    <!--Languages -->
    <string name="choose_lang_title">Choose Language</string>
    <string name="select_pref_lang_msg">Select preferable language</string>
    <string name="selected_lang_is_lbl">Selected Language is </string>
    <string name="ar_lang">Arabic</string>
    <string name="en_lang">English</string>
    <string name="save_btn">Save</string>
    <string name="exit_btn">Exit</string>

    <string-array name="languagesListArray">
        <item>Arabic</item>
        <item>English</item>
    </string-array>
    <string-array name="languagesListVals">
        <item>ar</item>
        <item>en</item>
    </string-array>


    <!-- Login UI -->
    <string name="login_lbl">Login</string>
    <string name="email_lbl">Email</string>
    <string name="password_lbl">Password</string>
    <string name="enter_lbl">Enter</string>
    <string name="register_new_account_lbl">No Account ? Sign up</string>
    <string name="processing_lbl">Processing</string>
    <string name="user_not_registered_msg">User not Registered</string>
    <string name="fill_all_fields_lbl">Please fill all fields</string>
    <string name="user_not_found_msg">Login could not completed. User not found</string>

    <!-- Registration UI -->
    <string name="register_form_title">Registration Form</string>
    <string name="username_lbl">Username</string>
    <string name="full_name_lbl">Full Name</string>
    <string name="birthdate_lbl">Birth Date</string>
    <string name="loading_lbl">Loading</string>
    <string name="submit_lbl">Submit</string>
    <string name="registration_success_msg">Registeration Succesful</string>
    <string name="process_failed_msg">Opss!! Process Failed</string>
    <string name="alread_registered_login_msg">already registered ? Login</string>

    <!-- Posts -->
    <string name="add_new_post_lbl">اضافة مقال</string>
    <string name="post_details_lbl">Posts Details</string>
    <string name="publish_date_lbl">Publish date</string>
    <string name="child_feeding_posts_by_ages_lbl">Child feeding by age</string>

    <!-- Chatbot UI -->
    <string name="chatbot_lbl">ChatBot</string>
    <string name="send_lbl">Send</string>
    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="tap_on_mic">Tap on mic to speak</string>
    <string name="type_something_in_text_box_lbl">Type something in the textbox</string>
    <string name="internet_connection_unavailable_lbl">No internet connection</string>

    <!-- Report -->
    <string name="report_child_health_form">Report Child Heath</string>
    <string name="reports_list_lbl">Reports List</string>
    <string name="child_name_lbl">Child Name</string>
    <string name="child_sex_lbl">Child Gender</string>
    <string name="child_age_lbl">Child Age</string>
    <string name="date_lbl">Date</string>
    <string name="parants_phone_no_lbl">Parents No.</string>
    <string name="weight_lbl">Weight</string>
    <string name="height_lbl">Height</string>
    <string name="temprature_lbl">Temprature</string>
    <string name="symptoms_lbl">Symptomes</string>
    <string name="dr_name_lbl">Dr Name</string>
    <string name="medical_center_name_lbl">Medical Center</string>
    <string name="medical_center_phone_lbl">Medical Center Phone</string>
    <string name="any_nots_about_child_health_lbl">Notes (if there is an allergy to a specific thing or food)</string>
    <string name="male_lbl">Male</string>
    <string name="female_lbl">Female</string>
    <string name="cm_lbl">cm</string>
    <string name="kg_lbl">K.G.</string>
    <string name="cancel_lbl">Cancel</string>
    <string name="status_lbl">Status</string>
    <string name="add_new_record_lbl">Add New Record</string>



</resources>
