<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".RegisterNewUserUI">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:textSize="32sp"
            android:textStyle="bold"
            android:fontFamily="serif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_form_title"/>

        <EditText
            android:layout_margin="8dp"
            android:id="@+id/usernameField"
            android:padding="16dp"
            android:textColor="#000"
            android:hint="@string/username_lbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_margin="8dp"
            android:id="@+id/emailField"
            android:padding="16dp"
            android:inputType="textEmailAddress"
            android:textColor="#000"
            android:hint="@string/email_lbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_margin="8dp"
            android:id="@+id/birthDateField"
            android:padding="16dp"
            android:focusable="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/birthdate_lbl"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp" />

        <EditText
            android:padding="16dp"
            android:layout_margin="8dp"
            android:id="@+id/passwordField"
            android:textColor="#000"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:hint="@string/password_lbl"
            android:layout_height="wrap_content" />


        <Button
            android:id="@+id/registerBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/action_button_style"
            android:text="@string/submit_lbl"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/loginTxtView"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alread_registered_login_msg"/>

    </LinearLayout>


</RelativeLayout>