<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:padding="10sp"
android:orientation="vertical" >

    <RadioGroup
        android:id="@+id/langs_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/arabicRadioBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ar_lang" />

        <RadioButton
            android:id="@+id/englishRadioBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/en_lang" />

    </RadioGroup>


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:weightSum="2"
    android:orientation="horizontal" >

    <Button
        android:padding="2sp"
        android:id="@+id/save_btn"
        android:layout_width="0dip"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/save_btn"
        android:textStyle="bold" />

    <Button
        android:padding="2sp"
        android:id="@+id/exit_btn"
        android:layout_width="0dip"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/exit_btn"
        android:textStyle="bold" />
</LinearLayout>

</LinearLayout>