<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".LoginUI">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:textSize="32sp"
            android:textStyle="bold"
            android:fontFamily="serif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_lbl"/>

        <EditText
            android:layout_margin="8dp"
            android:id="@+id/login_email"
            android:padding="16dp"
            android:inputType="textEmailAddress"
            android:textColor="#000"
            android:hint="@string/email_lbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:padding="16dp"
            android:layout_margin="8dp"
            android:id="@+id/login_password"
            android:textColor="#000"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:hint="@string/password_lbl"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/enter_lbl"
            android:textColor="#fff"
            android:background="@drawable/action_button_style"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/signUpTxtView"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_new_account_lbl"/>

    </LinearLayout>


</RelativeLayout>